--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,10 @@ jobs:
           artifact: ${{ secrets.AUTHENTICATION_ARTIFACT_ID }}
           region: westus
           image-tag: ${{ github.sha }}
-          build-context: /massdriver
       - name: Publish Bundle 
         uses: massdriver-cloud/actions/bundle_publish@v3
+        with:
+          build-directory: /massdriver
       - name: Set App1 Image Version
         uses: massdriver-cloud/actions/app_patch@v3
         with:
